--- a/frontend/index.html
+++ b/frontend/index.html
@@ -72,6 +72,11 @@
     <button onclick="sendMessage()">Send</button>
   </div>
 
+  <div style="margin-top: 10px;">
+    <button onclick="resetSession()">🔄 Reset Session</button>
+    <button onclick="startNewSession()">➕ New Session</button>
+  </div>
+
   <script src="script.js"></script>
 </body>
 </html>
